fix: fix calendar line overflow

--- a/packages/gantt/src/components/calendar/calendar.component.scss
+++ b/packages/gantt/src/components/calendar/calendar.component.scss
@@ -1,6 +1,6 @@
 .gantt-calendar-overlay {
   display: block;
-  height: 100%;
+  height: calc(100% - 8px);
   overflow: hidden;
 
   .gantt-calendar-today-overlay {
